--- a/Flint/build.gradle
+++ b/Flint/build.gradle
@@ -19,6 +19,21 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+sourceSets {
+    test {
+        java {
+            srcDir 'src'
+            exclude '**/InvalidFile.java'
+       }
+   }
+}
+
+test {
+  testLogging {
+    showStandardStreams = true
+  }
+}
+
 intellij {
     version '2018.2.4'
 }
