--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# Security
+*/gradle.properties
+*/secret-keys.gpg
+
 # User-specific stuff
 */.idea/**/workspace.xml
 */.idea/**/tasks.xml
